--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "npx tsx src/index.ts"
   },
-  "author": "Szalóczy Krisztián",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -15,7 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
