--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -68,6 +68,9 @@
               "buildTarget": "frontend:build:development"
             }
           },
+          "options": {
+             "proxyConfig": "src/proxy.conf.json"
+           },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
